--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -89,6 +89,16 @@ form {
   align-items: center;
 }
 
+.white-btn {
+  background-color: white;
+  color: black;
+  width: 200px;
+  padding: 8px 0;
+  border-radius: 4px;
+  font-size: 1.1rem;
+  text-align: center;
+}
+
 .success-btn {
   background-color: $main-color-b;
   color: $btn-text-b;
