--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -2,7 +2,7 @@
 <div class="flex-column-center event">
   <div class="flex-column">
     <div class="flex-column">
-      <a href="/events">Back to my events</a>
+      <button class="white-btn" id="back">Back to my events</button>
       <div class="flex-row">
         <div class="tile-image">
           <img src="{{event.picture}}" alt="event picture">
@@ -38,9 +38,10 @@
       <p>Date:</p>
       <p>{{event.date}}</p>
       <p>Attendees: {{event.counter}}</p> {{#if event.userAttending}}
-      <a href="/events/unattend/{{event._id}}">Unattend Event</a><br> {{else}}
-      <a href="/events/attend/{{event._id}}">Attend Event</a><br> {{/if}} {{#if event.own}}<a href="/events/edit/{{event._id}}">Edit
-        Event
+      <button class="white-btn" id="unattend">Unattend Event</button>
+      {{else}}
+      <button class="white-btn" id="attend">Attend Event</button>
+      {{/if}} {{#if event.own}}<a href="/events/edit/{{event._id}}">Edit Event
       </a>{{/if}}
       <br>
     </div>
@@ -49,3 +50,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
 <script src="/javascripts/chatEvent.js"></script>
+<script src="/javascripts/event-details.js"></script>
