Edit Event now button on Event Details

--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -41,8 +41,8 @@
       <button class="white-btn" id="unattend">Unattend Event</button>
       {{else}}
       <button class="white-btn" id="attend">Attend Event</button>
-      {{/if}} {{#if event.own}}<a href="/events/edit/{{event._id}}">Edit Event
-      </a>{{/if}}
+      {{/if}} {{#if event.own}}<button class="white-btn" id="edit">Edit Event</button>
+      {{/if}}
       <br>
     </div>
   </div>
