delete button on Event Details page

--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -41,9 +41,10 @@
       <button class="white-btn" id="unattend">Unattend Event</button>
       {{else}}
       <button class="white-btn" id="attend">Attend Event</button>
-      {{/if}} {{#if event.own}}<button class="white-btn" id="edit">Edit Event</button>
+      {{/if}} {{#if event.own}}</br><button class="white-btn" id="edit">Edit Event</button></br>
+      <button class="white-btn" id="delete">Delete Event</button>
       {{/if}}
-      <br>
+      </br>
     </div>
   </div>
 </div>
