correct date on Event Details

--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -36,7 +36,7 @@
       <p>Language:</p>
       <p>{{event.language}}</p>
       <p>Date:</p>
-      <p>{{event.date}}</p>
+      <p>{{event.dateStr}}</p>
       <p>Attendees: {{event.counter}}</p> {{#if event.userAttending}}
       <button class="white-btn" id="unattend">Unattend Event</button>
       {{else}}
