--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,6 +1,6 @@
 {{> navbar user}}
 <script src="/javascripts/dashboard.js"></script>
-<h1>Hello {{user.name}}</h1>
+<h1>Hi {{user.name}}!</h1>
 <div class="background-wrapper">
     {{!-- <img src="{{picture}}"> --}}
 </div>
