--- a/views/events/index.hbs
+++ b/views/events/index.hbs
@@ -1,9 +1,7 @@
 {{> navbar user}}
 <script src='/javascripts/tile.js'></script>
 
-<h3>
-    My events
-</h3>
+<h2>My events</h2>
 <div class="flex-column-center">
     <ul>
         {{#each events}}
