--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="icon" href="/images/favicon.ico">
 </head>
 
 <body>
