--- a/views/partials/tandem-tile.hbs
+++ b/views/partials/tandem-tile.hbs
@@ -1,10 +1,9 @@
-<div class="tile-interactive">
-  <div class="tile-image"> <img src={{this.picture}} alt="profile picture">
-  </div>
-  <div class="tile-content">
-    <h3>{{ this.name}}</h3>
-    <p>{{ this.description }}</p>
-    <p>{{ this.location.country }}, {{this.location.city}}</p>
-    <a href="/tandems/add/{{ this._id}}">Add</a>
-  </div>
+<div class="tile-image">
+  <img src={{this.picture}} alt="profile picture">
+</div>
+<div class="tile-content">
+  <h3>{{ this.name}}</h3>
+  <p>{{ this.description }}</p>
+  <p>{{ this.location.country }}, {{this.location.city}}</p>
+  <a href="/tandems/add/{{ this._id}}">Add</a>
 </div>
