--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -41,11 +41,14 @@
 }
 
 .tile-interactive {
+  background-color: white;
   height: $tile-picture-l;
-  margin: 2px 0;
+  margin: 5px 0;
   display: flex;
   align-items: center;
   width: 96vw;
+  border-radius: 10px;
+  box-shadow: $shadow;
   @media #{$screen-middle} {
     width: 80vw;
   }
