--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,7 @@
 <script src='/javascripts/landing-page.js'></script>
 <div class="center">
   <div class="content-wrapper">
+    {{!-- <img src="/images/temp-logo.png"> --}}
     <h1>{{title}}</h1>
     <h2>Talk with others in your and their language</h2>
     <div class="menu-container">
