larger chat on event details page and chat background colour

--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -17,7 +17,7 @@
     <div class="chat-wrapper">
       <div class="event" id="messages"></div>
       <form action="" class="event" id="user-input">
-        <button>Send</button>
+        <button class="white-btn">Send</button>
         <input id="m" autocomplete="off" />
         <div id="typing" style="color:white"></div>
       </form>
