--- a/public/stylesheets/chat.scss
+++ b/public/stylesheets/chat.scss
@@ -1,15 +1,22 @@
 #messages.tandem {
   width: calc(100vw - 200px - 38px); //full width - tandem list - padding;
   height: calc(100vh - #{$navbar-height} - 180px);
+  padding: 0 0 14px 6px;
+}
+
+#messages.event {
+  height: 440px;
+  padding: 0 0 0 6px;
+  margin-bottom: 6px;
 }
 
 .chat-wrapper {
   margin: 0 10px;
   #messages {
-    margin-bottom: 14px;
     overflow-y: auto;
+    background-color: #e9e9e9;
     .message-container {
-      margin: 5px 0;
+      margin: 6px 0;
       .inline-message {
         padding: 8px;
         border-radius: 14px;
@@ -29,12 +36,13 @@
   width: calc(100vw - 200px - 38px); //full width - tandem list - padding;
   display: flex;
   flex-direction: row;
+  padding-bottom: 4px;
   button {
-    height: 30px;
+    height: 36px;
     width: 80px;
   }
   input {
-    height: 30px;
+    height: 36px;
     width: 100%;
   }
 }
