--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -268,7 +268,7 @@ nav {
   .flex-column-center.event .flex-column {
     margin: 4px;
     justify-content: space-between;
-    height: 560px; }
+    height: 600px; }
     .flex-column-center.event .flex-column a {
       margin-left: 5px; }
     .flex-column-center.event .flex-column .flex-column {
@@ -340,16 +340,21 @@ nav {
 
 #messages.tandem {
   width: calc(100vw - 200px - 38px);
-  height: calc(100vh - 44px - 180px); }
+  height: calc(100vh - 44px - 180px);
+  padding: 0 0 14px 6px; }
+
+#messages.event {
+  height: 440px;
+  padding: 0 0 0 6px;
+  margin-bottom: 6px; }
 
 .chat-wrapper {
   margin: 0 10px; }
   .chat-wrapper #messages {
-    background-color: red;
-    margin-bottom: 14px;
-    overflow-y: auto; }
+    overflow-y: auto;
+    background-color: #e9e9e9; }
     .chat-wrapper #messages .message-container {
-      margin: 5px 0; }
+      margin: 6px 0; }
       .chat-wrapper #messages .message-container .inline-message {
         padding: 8px;
         border-radius: 14px;
@@ -362,12 +367,13 @@ nav {
 #user-input {
   width: calc(100vw - 200px - 38px);
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  padding-bottom: 4px; }
   #user-input button {
-    height: 30px;
+    height: 36px;
     width: 80px; }
   #user-input input {
-    height: 30px;
+    height: 36px;
     width: 100%; }
 
 * {
