--- a/public/stylesheets/event.scss
+++ b/public/stylesheets/event.scss
@@ -22,6 +22,7 @@ $chat-height: calc(100vh - #{$navbar-height} - 320px);
       .flex-row {
         .description {
           height: 100%;
+          width: 100%;
           padding: 0 4px;
         }
         margin-bottom: 8px;
