--- a/views/partials/event-tile.hbs
+++ b/views/partials/event-tile.hbs
@@ -3,6 +3,10 @@
 </div>
 <div class="tile-content">
   <h3>{{this.title}}</h3>
-  <p>{{this.description}}</p>
-  <p>{{this.dateStr}}</p>
+  <div class="date-location">
+    <p>{{this.dateStr}} - {{this.location.country}}{{#if this.location.city}}, {{this.location.city}}{{/if}}{{#if this.location.street}},
+      {{this.location.street}}{{/if}}</p>
+  </div>
+
+  <p class="description">{{this.description}}</p>
 </div>
