--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -226,6 +226,8 @@ nav {
   height: 120px;
   margin: 5px 0;
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
   width: 96vw;
   border-radius: 10px;
@@ -254,7 +256,10 @@ nav {
     padding: 0 8px;
     width: calc(100% - 80px - 30px);
     height: 100%;
-    font-size: 0.9rem; }
+    font-size: 0.9rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
     @media (min-width: 660px) {
       .tile-interactive .tile-content {
         width: calc(100% - 120px); } }
@@ -268,6 +273,26 @@ nav {
       padding-top: 2px; }
     .tile-interactive .tile-content .date-location p {
       color: gray; }
+    .tile-interactive .tile-content a {
+      width: 80px;
+      height: 20px;
+      font-size: 0.8rem;
+      background-color: #20a2ff;
+      color: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 4px; }
+
+.tile-content.tandem {
+  width: 200px;
+  margin: 0 6px 0 0; }
+
+.tandem-description {
+  overflow: hidden;
+  height: 75px;
+  padding-top: 2px;
+  width: calc(100% - 120px - 200px); }
 
 .flex-column-center.event {
   flex-direction: column;
