--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
   <div class="content-wrapper">
     {{!-- <img src="/images/temp-logo.png"> --}}
     <h1>{{title}}</h1>
-    <h2>Talk with others in your and their language</h2>
+    <h2>Learn language easy</h2>
     <div class="menu-container">
       <button class="success-btn" id="login">Log in</button>
       <button class="success-btn" id="signup">Create account</button>
