--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,38 +131,29 @@ nav {
   font-size: 2.4rem;
   margin: 0 0 20px 0; }
 
-.background-wrapper img {
-  background-position: center;
-  background-size: cover;
-  background-repeat: repeat;
-  width: 100vw;
-  height: 100vh; }
-
 .dashboard-wrapper {
-  width: 100vw;
   display: flex;
-  flex-direction: column;
-  align-items: center; }
+  flex-direction: row;
+  justify-content: space-around; }
   @media (min-width: 480px) {
     .dashboard-wrapper {
-      align-items: flex-end; } }
+      align-items: flex-start; } }
   .dashboard-wrapper .dashboard-group {
     width: 340px;
     margin: 30px 0 40px 0;
     padding: 4px;
     background: rgba(243, 243, 243, 0.2);
     border-radius: 4px; }
-    @media (min-width: 480px) {
-      .dashboard-wrapper .dashboard-group {
-        margin-right: 60px; } }
-    @media (min-width: 1024px) {
-      .dashboard-wrapper .dashboard-group {
-        margin-right: 100px; } }
     .dashboard-wrapper .dashboard-group h3 {
       font-size: 1.8rem; }
     .dashboard-wrapper .dashboard-group a,
     .dashboard-wrapper .dashboard-group p {
       font-size: 1.1rem; }
+    .dashboard-wrapper .dashboard-group .image-wrapper img {
+      margin: 4px 0;
+      max-width: 32vw;
+      max-height: 32vw;
+      border-radius: 12px; }
 
 .tile-dashboard {
   height: 80px;
